--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "18.0.0",
     "react-measure": "2.5.2",
     "react-scripts": "4.0.1",
+    "tabler-icons-react": "^1.52.0",
     "zustand": "4.0.0-rc.1"
   },
   "devDependencies": {
