--- a/.prettierrc
+++ b/.prettierrc
@@ -6,6 +6,6 @@
   "singleQuote": true,
   "trailingComma": "es5",
   "bracketSpacing": true,
-  "jsxBracketSameLine": true,
+  "jsxBracketSameLine": false,
   "fluid": false
 }
