--- a/package.json
+++ b/package.json
@@ -1,33 +1,19 @@
 {
   "name": "simple-qr-code-generator",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "via qrcode.react",
-  "keywords": [],
+  "type": "module",
+  "keywords": [
+    "qr",
+    "qrcode",
+    "browser"
+  ],
   "main": "src/index.tsx",
-  "dependencies": {
-    "@mantine/core": "4.2.11",
-    "@mantine/hooks": "4.2.11",
-    "@types/react": "16.14.28",
-    "@types/react-dom": "18.0.5",
-    "@types/react-measure": "2.0.8",
-    "js-file-download": "0.4.12",
-    "qrcode.react": "3.1.0",
-    "react": "18.0.0",
-    "react-dom": "18.0.0",
-    "react-measure": "2.5.2",
-    "react-scripts": "4.0.1",
-    "tabler-icons-react": "^1.52.0",
-    "zustand": "4.0.0-rc.1"
-  },
-  "devDependencies": {
-    "@babel/runtime": "7.13.8",
-    "typescript": "4.7.4"
-  },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "browserslist": [
     ">0.2%",
@@ -35,10 +21,30 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@mantine/core": "^6.0.13",
+    "@mantine/hooks": "^6.0.13",
+    "js-file-download": "^0.4.12",
+    "qrcode.react": "^3.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tabler-icons-react": "^1.56.0",
+    "zustand": "^4.3.8"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vitejs/plugin-react": "^4.0.0",
+    "eslint": "^8.42.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.1",
+    "postcss": "^8.4.24",
+    "postcss-preset-mantine": "^1.3.0",
+    "postcss-simple-vars": "^7.0.1",
+    "typescript": "^5.1.3",
+    "vite": "^4.3.9"
   }
 }
